remove pink color on light mode within docs

--- a/.moonwave/custom.css
+++ b/.moonwave/custom.css
@@ -18,7 +18,7 @@
     --ifm-color-primary-light: #ca76c3;
     --ifm-color-primary-lighter: #ce80c8;
     --ifm-color-primary-lightest: #daa0d6;
-    --ifm-background-color: #fff4fe;
+    --ifm-background-color: #fff;
 }
 
 .footer--dark {
